--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/imagesloaded": "^4.1.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-comlink": "^3.0.5",
     "vite-tsconfig-paths": "^4.0.5"
   },
   "dependencies": {
     "@barba/core": "^2.9.7",
+    "comlink": "^4.4.1",
     "gsap": "^3.11.4",
     "imagesloaded": "^5.0.0",
     "lodash": "^4.17.21",
