--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -13,7 +13,9 @@ jobs:
       - name: Setup Node
       - uses: actions/setup-node@v3
       - name: Install dependencies
-      - run: npm ci
+      - run: npm install
+      - name: Build
+        run: npm run build
       - name: Upload Artifact
       - uses: actions/upload-artifact@v3
       - with:
