--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Install dependencies
       - run: npm install
       - name: Build
-        run: npm run build
+      - run: npm run build
       - name: Upload Artifact
       - uses: actions/upload-artifact@v3
       - with:
-        name: demo-artifact
-        path: dist
+          name: demo-artifact
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
