--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -10,9 +10,10 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-
+      - name: Setup Node
+        uses: actions/setup-node@v3
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Build
         run: npm run build
       - name: Publish JS file
