convert from -exec to -execdir

--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build
         run: npm run build
       - name: Publish JS file
-        run: find dist/assets/*.js -type f -exec echo '{}' ';'
+        run: find dist/assets/*.js -type f -execdir echo '{}' ';'
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
