--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -31,6 +31,12 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+      - name: Install dependencies
+        run: npm install
       - name: Get Artifact
         uses: actions/download-artifact@v3
         with:
