--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -16,10 +16,12 @@ jobs:
         uses: actions/setup-node@v3
       - name: Cache dependencies
         uses: actions/cache@v3
+        id: deps-node-modules
         with:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
+        if: steps.deps-node-modules.outputs.cache-hit != 'true'
         run: npm install
       - name: Build
         run: npm run build
@@ -42,10 +44,12 @@ jobs:
         uses: actions/setup-node@v3
       - name: Cache dependencies
         uses: actions/cache@v3
+        id: deps-node-modules
         with:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
+        if: steps.deps-node-modules.outputs.cache-hit != 'true'
         run: npm install
       - name: Get Artifact
         uses: actions/download-artifact@v3
