--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -48,6 +48,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Cache dependencies
         uses: actions/cache@v3
         id: deps-node-modules
