--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -14,8 +14,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
-        with:
-          node-version: 18
+
       - name: Cache dependencies
         uses: actions/cache@v3
         id: deps-node-modules
@@ -25,6 +24,7 @@ jobs:
           restore-keys: |
             deps-node-modules-
       - name: Install dependencies
+        if: steps.deps-node-modules.outputs.cache-hit != 'true'
         run: |
           if [[ -e package-lock.json ]]; then
           npm ci
@@ -50,8 +50,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
-        with:
-          node-version: 18
       - name: Cache dependencies
         uses: actions/cache@v3
         id: deps-node-modules
@@ -61,6 +59,7 @@ jobs:
           restore-keys: |
             deps-node-modules-
       - name: Install dependencies
+        if: steps.deps-node-modules.outputs.cache-hit != 'true'
         run: |
           if [[ -e package-lock.json ]]; then
           npm ci
