--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -4,9 +4,14 @@ on:
   push:
     branches:
       - main
+env:
+  MONGODB_DB_NAME: GHA-DEMO
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      TEST_ENV: HELLO
+      TEST_ENVV: WORLD
     outputs:
       script-file: ${{ steps.publish.outputs.script-file }}
     steps:
@@ -14,7 +19,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
-
       - name: Cache dependencies
         uses: actions/cache@v3
         id: deps-node-modules
@@ -41,6 +45,8 @@ jobs:
         with:
           name: demo-artifact
           path: dist
+      - name: Check ENV
+        run: env
   deploy:
     needs: build
     runs-on: ubuntu-latest
