add control flow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,3 +52,8 @@ jobs:
       - name: ECHO
         run: |
           echo ${{ steps.deployment.outputs.page_url }}
+      - name: Control Flow
+        id: control-flow
+        if: steps.deployment.outcome == 'success'
+        run: |
+          echo "Hello World"
