--- a/.github/workflows/event.yml
+++ b/.github/workflows/event.yml
@@ -6,7 +6,8 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - master
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -23,3 +24,9 @@ jobs:
         run: npm run build
       - name: Deploy project
         run: echo "Deploying..."
+  report:
+    runs-on: ubuntu-latest
+    needs: [deploy]
+    steps:
+      - name: Check context
+        run: echo ${{ toJSON(github) }}
