--- a/.github/workflows/event.yml
+++ b/.github/workflows/event.yml
@@ -26,6 +26,7 @@ jobs:
         run: echo "Deploying..."
   report:
     runs-on: ubuntu-latest
+    continue-on-error:
     needs: [deploy]
     steps:
       - name: Check context
