update new cache mechanism

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,14 +37,14 @@ jobs:
           cache: "npm"
       - name: Cache dependencies
         uses: actions/cache@v3
-        id: deps-node-modules
+        id: node-modules
         with:
           path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            deps-node-modules-
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+          # restore-keys: |
+          #   node-modules-
       - name: Install dependencies
-        if: steps.deps-node-modules.outputs.cache-hit != 'true'
+        if: steps.node-modules.outputs.cache-hit != 'true'
         run: |
           if [[ -e package-lock.json ]]; then
           npm ci
@@ -83,14 +83,14 @@ jobs:
           cache: "npm"
       - name: Cache dependencies
         uses: actions/cache@v3
-        id: deps-node-modules
+        id: node-modules
         with:
           path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            deps-node-modules-
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+          # restore-keys: |
+          #   deps-node-modules-
       - name: Install dependencies
-        if: steps.deps-node-modules.outputs.cache-hit != 'true'
+        if: steps.node-modules.outputs.cache-hit != 'true'
         run: |
           if [[ -e package-lock.json ]]; then
           npm ci
