learning reusable workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -103,3 +103,5 @@ jobs:
           fi
       - name: Build
         run: npm run build
+  test-reuseable:
+    uses: ./.github/workflows/reusable.yml
