--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -1,8 +1,20 @@
 name: Reusable Deploy
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      artifact-name:
+        description: Put some description here
+        default: dist
+        type: string
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Get code
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ inputs.artifact-name }}
+      - name: List files
+        run: ls
       - name: Output Info
         run: echo "Deploying & Uploading..."
