--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,7 @@ jobs:
         with:
           # Upload dist repository
           path: "./dist"
+          name: "dist-files"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
@@ -104,4 +105,7 @@ jobs:
       - name: Build
         run: npm run build
   test-reuseable:
+    needs: deploy
     uses: ./.github/workflows/reusable.yml
+    with:
+      artifact-name: dist-files
