--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,6 +117,7 @@ jobs:
     uses: ./.github/workflows/reusable.yml
     with:
       artifact-name: dist-files
+  other-step:
     steps:
       - name: Test output from resuable workflow
         run: echo ${{ toJSON(needs) }}
