--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,6 +85,7 @@ jobs:
         run: |
           echo "Hello World"
   test-cache:
+    needs: deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
