--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,126 +1,22 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
-
+name: Practice make perfect
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
+    branches:
+      - master
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Get code
         uses: actions/checkout@v3
-      - name: Set up Node
-        uses: actions/setup-node@v3
+      - name: Load & cache dependencies
+      - uses: ./.github/actions/cached-deps
+        id: cache-deps
         with:
-          node-version: 18
-          cache: "npm"
-      - name: LS before cache
-        run: ls
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        id: node-modules
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('**/package-lock.json') }}
-          # restore-keys: |
-          #   node-modules-
-      - name: Install dependencies
-        if: steps.node-modules.outputs.cache-hit != 'true'
+          caching: "true"
+      - name: Build app
         run: |
-          if [[ -e package-lock.json ]]; then
-          npm ci
-          else
-          npm i
-          fi
-      - name: LS after install dependences
-        run: ls
-      - name: Build
-        run: npm run build
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist-files
-          path: ./dist
-
-      - name: List
-        run: ls
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: "./dist"
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
-
-      - name: ECHO
+          npm run build
+      - name: Output info
         run: |
-          echo ${{ steps.deployment.outputs.page_url }}
-      - name: Control Flow
-        id: control-flow
-        if: failure() && steps.deployment.outcome == 'success'
-        run: |
-          echo "Hello World"
-  test-cache:
-    needs: deploy
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: "npm"
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        id: node-modules
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('**/package-lock.json') }}
-          # restore-keys: |
-          #   deps-node-modules-
-      - name: Install dependencies
-        if: steps.node-modules.outputs.cache-hit != 'true'
-        run: |
-          if [[ -e package-lock.json ]]; then
-          npm ci
-          else
-          npm i
-          fi
-      - name: Build
-        run: npm run build
-  test-reuseable:
-    needs: deploy
-    uses: ./.github/workflows/reusable.yml
-    with:
-      artifact-name: dist-files
-  other-step:
-    needs: test-reuseable
-    runs-on: ubuntu-latest
-    steps:
-      - name: Test output from resuable workflow
-        run: echo ${{ needs.test-reuseable }}
+          echo "Used cache? ${{ steps.cache-deps.outputs.used-cache }}"
