--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: Load & cache dependencies
-      - uses: ./.github/actions/cached-deps
+         uses: ./.github/actions/cached-deps
         id: cache-deps
         with:
           caching: "true"
@@ -24,5 +24,7 @@ jobs:
   informaion:
     runs-on: ubuntu-latest
     steps:
+      - name: Get code
+        uses: actions/checkout@v3
       - name: Output script from JS Script
         uses: "./.github/actions/js-script"
