--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -23,5 +23,5 @@ runs:
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
       run: |
         npm ci
-        echo "cache=${{input.caching}}" >> $GITHUB_OUTPUT
+        echo "cache=${{inputs.caching}}" >> $GITHUB_OUTPUT
       shell: bash
