checkout output context

--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -25,3 +25,7 @@ runs:
         npm ci
         echo "cache=${{inputs.caching}}" >> $GITHUB_OUTPUT
       shell: bash
+      - name: Check Info Output
+        run: |
+          echo ${{ toJSON(outputs) }}
+        shell: bash
