--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -27,5 +27,5 @@ runs:
       shell: bash
     - name: Check Info Output
       run: |
-        echo ${{ toJSON(outputs) }}
+        echo ${{ toJSON(steps.install.outputs) }}
       shell: bash
