--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -29,7 +29,7 @@ runs:
       run: |
         echo "cache=${{inputs.caching}}" >> $GITHUB_OUTPUT
       shell: bash
-    - name: Check Info Output
-      run: |
-        echo ${{ toJSON(steps.test-output.outputs) }}
-      shell: bash
+    # - name: Check Info Output
+    #   run: |
+    #     echo ${{ toJSON(steps.test-output.outputs) }}
+    #   shell: bash
