update cache output value

--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -8,7 +8,7 @@ inputs:
 outputs:
   used-cache:
     description: "Whether the cache was used"
-    value: ${{ steps.install.outputs.cache }}
+    value: ${{ steps.test-output.outputs.cache }}
 runs:
   using: "composite"
   steps:
